# eplinalg

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  DetectExtendedPrecision.cmake  FortranCompiler.cmake  README.md  pyproject.toml  target_config.cmake
cmake/: CMakeLists.txt  CMakePresets.json  DetectExtendedPrecision.cmake  EplinalgInstall.cmake  EplinalgLibraryHelpers.cmake  EplinalgMumps.cmake  EplinalgPrivatizeGate.cmake  EplinalgPrivatizeGateCheck.cmake  FortranCompiler.cmake
examples/mmsolve/: CMakeLists.txt  mmio_min.c  mmsolve.c
examples/mmsolve/data/: A_cplx.mtx  b_cplx.mtx
runtime/mpiseq/: CMakeLists.txt  mpiseq_c_stubs.c  mpiseq_ep_stubs.f  mpiseq_mw_stubs.f90  mpiseq_ptscotch_stubs.f90  mpiseq_qx_stubs.f
runtime/multifloats-mpi/: CMakeLists.txt  multifloats_bridge.h  multifloats_mpi.cpp  multifloats_mpi_f.f90
src/epopenblas/: CHECKLIST.md  CMakeLists.txt
src/epopenblas/common/: eblas_l3_complex.c  eblas_l3_complex.h  eblas_l3_real.c  eblas_l3_real.h
src/epopenblas/kind10/: CMakeLists.txt  easum.c  eaxpy.c  ecabs1.c  ecopy.c  edot.c  egbmv.c  egemm.c  egemmtr.c  egemv.c  eger.c  enrm2.c  erot.c  erotg.c  erotm.c  erotmg.c  esbmv.c  escal.c  espmv.c  espr.c  espr2.c  eswap.c  esymm.c  esymv.c  esyr.c  esyr2.c  esyr2k.c  esyrk.c  etbmv.c  etbsv.c  etpmv.c  etpsv.c  etrmm.c  etrmv.c  etrsm.c  etrsv.c  eyasum.c  eynrm2.c  ieamax.c  iyamax.c  (+36 more)
src/multifloats-mpi/: CMakeLists.txt  multifloats_bridge.h  multifloats_mpi.cpp  multifloats_mpi_f.f90
src/parallel_blas/: CMakeLists.txt
src/parallel_blas/common/: blas_omp.c  blas_omp.h
src/parallel_blas/kind10/: CMakeLists.txt  easum.c  eaxpy.c  ecabs1.c  ecopy.c  edot.c  egbmv.c  egemm.c  egemmtr.c  egemv.c  eger.c  enrm2.c  erot.c  erotg.c  erotm.c  erotmg.c  esbmv.c  escal.c  espmv.c  espr.c  espr2.c  eswap.c  esymm.c  esymv.c  esyr.c  esyr2.c  esyr2k.c  esyrk.c  etbmv.c  etbsv.c  etpmv.c  etpsv.c  etrmm.c  etrmv.c  etrsm.c  etrsv.c  eyasum.c  eynrm2.c  ieamax.c  iyamax.c  (+36 more)
src/parallel_blas/kind16/: CMakeLists.txt  iqamax.c  ixamax.c  qasum.c  qaxpy.c  qcabs1.c  qcopy.c  qdot.c  qgbmv.c  qgemm.c  qgemmtr.c  qgemv.c  qger.c  qmath_inline.h  qnrm2.c  qrot.c  qrotg.c  qrotm.c  qrotmg.c  qsbmv.c  qscal.c  qspmv.c  qspr.c  qspr2.c  qswap.c  qsymm.c  qsymv.c  qsyr.c  qsyr2.c  qsyr2k.c  qsyrk.c  qtbmv.c  qtbsv.c  qtpmv.c  qtpsv.c  qtrmm.c  qtrmv.c  qtrsm.c  qtrsv.c  qxasum.c  (+37 more)
src/parallel_blas/multifloats/: CMakeLists.txt  imamax.cpp  iwamax.cpp  masum.cpp  maxpy.cpp  mcabs1.cpp  mcopy.cpp  mdot.cpp  mgbmv.cpp  mgemm.cpp  mgemm_simd_kernel.h  mgemmtr.cpp  mgemv.cpp  mger.cpp  mnrm2.cpp  mrot.cpp  mrotg.cpp  mrotm.cpp  mrotmg.cpp  msbmv.cpp  mscal.cpp  mspmv.cpp  mspr.cpp  mspr2.cpp  mswap.cpp  msymm.cpp  msymv.cpp  msyr.cpp  msyr2.cpp  msyr2k.cpp  msyrk.cpp  mtbmv.cpp  mtbsv.cpp  mtpmv.cpp  mtpsv.cpp  mtrmm.cpp  mtrmv.cpp  mtrsm.cpp  mtrsv.cpp  mwasum.cpp  (+37 more)
src/quad-mpi/: CMakeLists.txt  quad_mpi.c
test/integration/ptzblas/: CMakeLists.txt
test/integration/ptzblas/common/: ref_quad_aux.f90
tests/blas_epopenblas/: CMakeLists.txt
tests/blas_epopenblas/bench/target_kind10/: bench_easum.fypp  bench_ecopy.fypp  bench_edot.fypp  bench_egbmv.fypp  bench_enrm2.fypp  bench_erotm.fypp  bench_erotmg.fypp  bench_escal.fypp  bench_espmv.fypp  bench_esyr2.fypp  bench_etbmv.fypp  bench_etbsv.fypp  bench_etrmv.fypp  bench_eynrm2.fypp  bench_ieamax.fypp  bench_ycopy.fypp  bench_yerot.fypp  bench_yescal.fypp  bench_ygbmv.fypp  bench_ygerc.fypp  bench_yhemv.fypp  bench_yher.fypp  bench_yher2k.fypp  bench_yhpmv.fypp  bench_yhpr.fypp  bench_yscal.fypp  bench_ysyr2k.fypp  bench_ytbsv.fypp  bench_ytrsm.fypp
tests/blas_epopenblas/common/target_kind10/: fuzz_util.fypp
tests/blas_parallel/: CMakeLists.txt
tests/blas_parallel/bench/: bench_axpy_complex_body.fypp  bench_axpy_real_body.fypp  bench_copyswap_complex_body.fypp  bench_copyswap_real_body.fypp  bench_dot_complex_body.fypp  bench_dot_real_body.fypp  bench_egemm.f90  bench_gbmv_complex_body.fypp  bench_gbmv_real_body.fypp  bench_gemm_complex_body.fypp  bench_gemm_real_body.fypp  bench_gemmtr_complex_body.fypp  bench_gemmtr_real_body.fypp  bench_gemv_complex_body.fypp  bench_gemv_real_body.fypp  bench_ger_complex_body.fypp  bench_ger_real_body.fypp  bench_hbmv_body.fypp  bench_hemm_body.fypp  bench_hemv_body.fypp  bench_her2_body.fypp  bench_her2k_body.fypp  bench_her_body.fypp  bench_herk_body.fypp  bench_hpmv_body.fypp  bench_hpr2_body.fypp  bench_hpr_body.fypp  bench_iamax_complex_body.fypp  bench_iamax_real_body.fypp  bench_norm_mixed_body.fypp  bench_norm_real_body.fypp  bench_rot_mixed_body.fypp  bench_rot_real_body.fypp  bench_rotg_complex_body.fypp  bench_rotg_real_body.fypp  bench_rotm_real_body.fypp  bench_rotmg_real_body.fypp  bench_sbmv_body.fypp  bench_scal_complex_body.fypp  bench_scal_mixed_body.fypp  (+29 more)
tests/blas_parallel/common/: fuzz_util.f90  fuzz_util_body.fypp
tests/blas_parallel/consistency/: fuzz_axpy_complex_body.fypp  fuzz_axpy_real_body.fypp  fuzz_cabs1_body.fypp  fuzz_copyswap_complex_body.fypp  fuzz_copyswap_real_body.fypp  fuzz_dot_complex_body.fypp  fuzz_dot_real_body.fypp  fuzz_egemm.f90  fuzz_gbmv_complex_body.fypp  fuzz_gbmv_real_body.fypp  fuzz_gemm_complex_body.fypp  fuzz_gemm_real_body.fypp  fuzz_gemmtr_complex_body.fypp  fuzz_gemmtr_real_body.fypp  fuzz_gemv_complex_body.fypp  fuzz_gemv_real_body.fypp  fuzz_ger_complex_body.fypp  fuzz_ger_real_body.fypp  fuzz_hbmv_body.fypp  fuzz_hemm_body.fypp  fuzz_hemv_body.fypp  fuzz_her2_body.fypp  fuzz_her2k_body.fypp  fuzz_her_body.fypp  fuzz_herk_body.fypp  fuzz_hpmv_body.fypp  fuzz_hpr2_body.fypp  fuzz_hpr_body.fypp  fuzz_iamax_complex_body.fypp  fuzz_iamax_real_body.fypp  fuzz_norm_mixed_body.fypp  fuzz_norm_real_body.fypp  fuzz_rot_mixed_body.fypp  fuzz_rot_real_body.fypp  fuzz_rotg_complex_body.fypp  fuzz_rotg_real_body.fypp  fuzz_rotm_real_body.fypp  fuzz_rotmg_real_body.fypp  fuzz_sbmv_body.fypp  fuzz_scal_complex_body.fypp  (+31 more)
tests/blas_parallel/perf/: perf_common.h
(+3571 files in other folders)
